# floodcast

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  compose.prod.yml  compose.yml  ingress.yaml  justfile  kubernetes_deployment.yaml  pyproject.toml
models/comephores/: justfile
models/preprocess/: .gitignore  justfile  pyproject.toml
models/watershed/: Dockerfile  README.md  justfile  pyproject.toml  weights.py
models/watershed/outlets/: portet.dbf  portet.shp  portet.shx
preprocess/: weights.py
scripts/deployment/: build-images.sh  create-services.sh  deploy.sh  undeploy.sh
services/alert/: pyproject.toml
services/alert/alert.egg-info/: PKG-INFO  (+2 more)
services/config-server/: config_deployment.yaml  config_service.yaml  pyproject.toml
services/dashboard/: package-lock.json  package.json  pyproject.toml
services/eco-design-efootprint/: modelisation.ipynb
services/flood-prediction/: pyproject.toml
services/flow-data/: flow_data_deployment.yaml  flow_data_service.yaml  main.py  pyproject.toml
services/flow-prediction/: pyproject.toml
services/flow-prediction/app/: main.py
services/flow-prediction/app/dependencies/: config.py
services/flow-prediction/app/predict/: compute_flow_rate.py  get_flow_rate.py  predict_flow_rate.py  reproject.py  watershed.py  weather.py
services/gateway/: gateway_deployment.yaml  gateway_service.yaml  main.py  pyproject.toml
services/inference/: pyproject.toml
services/weather-data/: pyproject.toml  weather_data_deployment.yaml  weather_data_service.yaml
services/weather-data/app/: cache.py  fetch.py  main.py  models.py
services/weather-data/app/dependencies/: config.py
uml_diagram/: alert_sequence_diagram.puml  class_diagram.puml  consult_data_sequence_diagram.puml  inference_alert_sequence_diagram.puml  inference_sequence_diagram.puml  microservices_diagram.puml  prediction_sequence_diagram.puml  sequence_diagram.puml  subscribe_sequence_diagram.puml  use_case.puml
(+41 files in other folders)
