[project]
name = "floodcast"
version = "0.1.0"
description = "Flood prediction microservices."
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[tool.uv.workspace]
members = [
    "services/weather-data",
    "services/flow-data",
    "services/flow-prediction",
    "services/gateway",
    "services/config-server",
    "models/flow-prediction",
]

[tool.ty.environment]
root = [
    "services/weather-data/",
    "services/flow-data/",
    "services/flow-prediction/",
    "services/gateway/",
    "services/config-server/",
]
