[project]
name = "flow-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi[standard]>=0.121.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "rasterio>=1.5.0",
]

[tool.pyright]
venvPath = "../../"
venv =  ".venv"
