[project]
name = "weather-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.28.1",
    "isodate>=0.7.2",
    "lxml>=6.0.2",
]

[tool.pyright]
venvPath = "../../"
venv =  ".venv"
